[package]
name = "server"
version = "0.1.0"
description = "Axum and Gems Rust SDK demo."
license = "MIT"
repository = "https://github.com/wiseaidev/gems"
homepage = "https://github.com/wiseaidev/gems"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
documentation = "https://docs.rs/gems"
readme = "README.md"
keywords = ["gems", "gems-sdk", "API", "Rust", "Axum"]
edition = "2021"

[dependencies]
gems = { path = "../.." }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
axum = "0.7.4"
http = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
