[package]
name = "server"
version = "0.1.0"
description = "Rocket and Gems Rust SDK demo."
license = "MIT"
repository = "https://github.com/wiseaidev/gems"
homepage = "https://github.com/wiseaidev/gems"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
documentation = "https://docs.rs/gems"
readme = "README.md"
keywords = ["gems", "gems-sdk", "API", "Rust", "Rocket"]
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0", features = ["json"] }
gems = { path = "../.." }
rocket_cors = "0.6.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
